Fix binary files in GitRepository#checkout
This would in turn cause the merge import code to see incorrect
contents for binary files, resulting in spurious diffs.

Bug: 305035334
Change-Id: I062eb17cbf27d4adcc74e4ef57476d5541479819